starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__function__tests__function_with_params.snap
---
source: starstream-compiler/src/parser/definition/function.rs
description: "Code:\n\nfn add(a: i64, b: i64) -> i64 { a }"
---
FunctionDef {
    export: None,
    name: Identifier {
        name: "add",
        span: 3..6,
    },
    params: [
        FunctionParam {
            public: false,
            name: Identifier {
                name: "a",
                span: 7..8,
            },
            ty: Named {
                name: [
                    Identifier {
                        name: "i64",
                        span: 10..13,
                    },
                ],
                generics: [],
            },
        },
        FunctionParam {
            public: false,
            name: Identifier {
                name: "b",
                span: 15..16,
            },
            ty: Named {
                name: [
                    Identifier {
                        name: "i64",
                        span: 18..21,
                    },
                ],
                generics: [],
            },
        },
    ],
    return_type: Some(
        Named {
            name: [
                Identifier {
                    name: "i64",
                    span: 26..29,
                },
            ],
            generics: [],
        },
    ),
    body: Block {
        statements: [],
        tail_expression: Some(
            Spanned {
                node: ScopedName(
                    [
                        Identifier {
                            name: "a",
                            span: 32..33,
                        },
                    ],
                ),
                span: 32..34,
            },
        ),
        span: 30..35,
    },
}
