starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__function__tests__function_with_public_param.snap
---
source: starstream-compiler/src/parser/definition/function.rs
description: "Code:\n\nfn reveal(pub value: i64) -> i64 { value }"
---
FunctionDef {
    export: None,
    name: Identifier {
        name: "reveal",
        span: 3..9,
    },
    params: [
        FunctionParam {
            public: true,
            name: Identifier {
                name: "value",
                span: 14..19,
            },
            ty: Named {
                name: [
                    Identifier {
                        name: "i64",
                        span: 21..24,
                    },
                ],
                generics: [],
            },
        },
    ],
    return_type: Some(
        Named {
            name: [
                Identifier {
                    name: "i64",
                    span: 29..32,
                },
            ],
            generics: [],
        },
    ),
    body: Block {
        statements: [],
        tail_expression: Some(
            Spanned {
                node: ScopedName(
                    [
                        Identifier {
                            name: "value",
                            span: 35..40,
                        },
                    ],
                ),
                span: 35..41,
            },
        ),
        span: 33..42,
    },
}
